# esgf-prepare

./: .buildinfo  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  autodoc.html  check-vocab.html  checkvocab.html  codemcp.toml  conf.py  configuration.html  credits.html  drs.html  dset.txt  esg_mapfiles.py  esgprep-20170616-172504-59148.err  esgprep-20170616-172829-61575.err  examples.html  faq.html  fetch-ini.html  fetchini.html  fetchtables.html  genindex.html  index.html  index.rst  installation.html  log.html  mapfile.txt  mapfiles.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  synopsis.html  tatus  test.py  (+2 more)
_modules/: index.html
_sources/: examples.rst.txt  faq.rst.txt  index.rst.txt  index.txt  installation.rst.txt  log.rst.txt  mapfiles.rst.txt  usage.rst.txt
docs/: DONE.md  Makefile  TODO.md  autodoc.rst  build.sh  check-vocab.rst  concepts.rst  conf.py  configuration.rst  credits.rst  drs.rst  faq.rst  fetch-ini.rst  fetchini.rst  fetchtables.rst  getting_started.rst  getting_started_feat_dev.md  index.rst  installation.rst  log.rst  mapfiles.rst  migration.rst  synopsis.rst  usage.rst
esgmapfiles/: ._utils.py  checkvocab.py  config.ini  esgmapfiles.ini  esgmapfiles.py  esgmapfilesutils.py
esgmapfiles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
esgprep/: .noseids  __init__.py  checkvocab.py  constants.py  drs.py  esgcheckvocab.py  esgdrs.py  esgfetchcv.py  esgfetchini.py  esgfetchtables.py  esgmapfile.py  esgmapfilesutils.py  esgprep.py  esgprep.spec  mapfile.py  sb.py
esgprep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mapfiles/: cmip5.output1.BCC.bcc-csm1-1.1pctCO2.day.atmos.day.r1i1p1.v1.map
modules/: index.html
notebooks/: esgprep-and-cmip6.ipynb
recipe/: conda_build.sh  meta.yaml  setup.py
sh/: activate  activate_venv.sh  install.sh  install_python.sh  install_venv.sh  update.sh  update_source.sh  update_venv.sh  utils.sh
sources/: autodoc.rst.txt  (+21 more)
(+344 files in other folders)
