[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esgf-prepare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esgvoc>=0.3.0",
    "fuzzywuzzy>=0.18.0",
    "hurry-filesize>=0.9",
    "lockfile>=0.12.2",
    "netcdf4>=1.7.2",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "treelib>=1.7.1",
]

[tool.hatch.build]
sources = ["."]

[tool.hatch.build.targets.wheel]
packages = ["esgprep"]

[tool.hatch.version]
path = "esgprep/__init__.py"

